<resources>
    <!-- STRING LAB 01-->
    <string name="app_name">Send Meal</string>
    <string name="titulo_inicial">Bienvenido a Send Meal</string>
    <string name="titulo_form">Complete los campos solicitados:</string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="mail">Ingrese un Correo Electrónico</string>
    <string name="passwd">Ingrese una Contraseña</string>
    <string name="rep_passwd">Ingrese Nuevamente su Contraseña</string>
    <string name="tipo_tarjeta">Tipo de Tarjeta:</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="tarjeta">Número de Tarjeta</string>
    <string name="ccv">CCV</string>
    <string name="mes">Mes</string>
    <string name="anio">Año</string>
    <string name="carga">¿Realizar una carga inicial?</string>
    <string name="term_cond">Acepto los términos y condiciones</string>
    <string name="registrar">Registrar</string>
    <string name="cbu">CBU</string>
    <string name="alias">Alias</string>
    <string name="fechaVencimiento">Fecha de Vencimiento</string>
    <string name="mailCorrecto">[a-zA-Z0-9._-]+@[a-z]+\\.[a-z]+</string>
    <string-array name="mesVencimiento">
        <item>:: Seleccione ::</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="aniosVencimiento">
        <item>:: Seleccione ::</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <!-- FIN STRING LAB 01-->

    <!-- STRING LAB 02-->
    <string name="tituloNuevoPlato">Nuevo Plato</string>
    <string name="titulo">Título</string>
    <string name="descripcionNuevoPlato">Descripción</string>
    <string name="precioNuevoPlato">Precio</string>
    <string name="caloriasNuevoPlato">Calorías</string>
    <string name="guardarNuevoPlato">Guardar</string>
    <!-- FIN STRING LAB 02-->

    <!-- STRING LAB 03-->
    <string name="tituloNuevoPedido">Nuevo Pedido</string>
    <string name="correoNuevoPedido">Ingrese correo electronico</string>
    <string name="direccionNuevoPedido">Ingrese la dirección de destino</string>
    <string name="tipoNuevoPedido">Tipo de pedido: </string>
    <string name="envioNuevoPedido">Envio</string>
    <string name="takeawayNuevoPedido">Take Away</string>
    <string name="listadoPlatosNuevoPedido">Ver Platos</string>
    <string name="tituloListadoNuevoPedido">Plato a pedir:</string>
    <string name="totalNuevoPedido">Total del pedido: $</string>

    <string name="guardarNuevoPedido">Realizar Pedido</string>
    <string name="unidades">Unidades:</string>
    <string name="agregar">+ Agregar +</string>
    <!-- FIN STRING LAB 03-->

    <!--STRING LAB 05-->
    <string name="google_maps_key">AIzaSyB3r26xeFJCa_L5S6tbrIRsyqibZVFWRGk</string>
    <string name="btnAgregarUbicacion">Agregar Ubicacion Actual</string>
    <string name="permiso_ubicacion">Se necesitan los permisos de localización, ¿Acepta concederlos?</string>
    <!-- FIN STRING LAB 05-->

</resources>


