<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AltaItemActivity">
    <include
        layout="@layout/homeactivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/nevoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloNuevoPedido"
        android:textSize="30sp"
        android:layout_marginBottom="@dimen/margenes_inferior"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/correoPedidoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correoNuevoPedido"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margenes_inferior" />

    <EditText
        android:id="@+id/direccionPedidoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/direccionNuevoPedido"
        android:inputType="textMultiLine"
        android:layout_marginBottom="@dimen/margenes_inferior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoNuevoPedido"
            android:textColor="@android:color/black" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/botonEnvioPedido"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/envioNuevoPedido"/>
            <RadioButton
                android:id="@+id/botonTakeawayPedido"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/takeawayNuevoPedido" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/listadoPlatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnGuardarPlato"
        android:hint="@string/listadoPlatosNuevoPedido"
        android:enabled="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/listadoProductosPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloListadoNuevoPedido"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/margenes_inferior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalNuevoPedido"
        android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/totalNuevoPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="TOTAL"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/botonGuardarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnGuardarPlato"
        android:hint="@string/guardarNuevoPedido"
        android:enabled="true"
        android:layout_marginTop="10dp"/>

</LinearLayout>