<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AltaItemActivity">
    <include
        layout="@layout/homeactivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/nuevoPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloNuevoPlato"
        android:textSize="30sp"
        android:layout_marginBottom="@dimen/margenes_inferior" />


    <EditText
        android:id="@+id/tituloPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margenes_inferior" />

    <EditText
        android:id="@+id/descripcionPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/descripcionNuevoPlato"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:layout_marginBottom="@dimen/margenes_inferior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="$"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/precioPlato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/precioNuevoPlato"
            android:inputType="numberDecimal"
            android:maxLength="6"/>
        <EditText
            android:id="@+id/caloriasPlato"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:hint="@string/caloriasNuevoPlato"
            android:inputType="number"
            android:maxLength="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/botonSacarFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/margenes_inferior"
            android:background="@color/btnGuardarPlato"
            android:enabled="true"
            android:hint="Sacar foto" />

        <Button
            android:id="@+id/botonBuscarGaleria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/margenes_inferior"
            android:background="@color/btnGuardarPlato"
            android:enabled="true"
            android:hint="Buscar en galeria" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewPlato"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/margenes_inferior"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:tag="PlatoVacio"
            app:srcCompat="@drawable/plato" />
    </LinearLayout>

    <Button
        android:id="@+id/botonGuardarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnGuardarPlato"
        android:enabled="true"
        android:hint="@string/guardarNuevoPlato" />

</LinearLayout>